--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,15 +1,16 @@
 homeassistant:
   # Name of the location where Home Assistant is running
-  name: Home
+  name: La Chiquita
   # Location required to calculate the time the sun rises and sets
-  latitude: 0
-  longitude: 0
-  # Impacts weather/sunrise data (altitude above sea level in meters)
-  elevation: 0
-  # metric for Metric, imperial for Imperial
-  unit_system: metric
+  latitude: !secret latitude_home
+  longitude: !secret longitude_home
+  elevation: 63
+# metric for Metric, imperial for Imperial
+  unit_system: imperial
+   # C for Celcius, F for Fahrenheit
+  temperature_unit: F
   # Pick yours from here: http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-  time_zone: UTC
+  time_zone: America/Los_Angeles
   # Customization file
   customize: !include customize.yaml
 
