--- a/configuration.yaml
+++ b/configuration.yaml
@@ -53,7 +53,7 @@ isy994:
   host: !secret isy994_hostname
   username: !secret isy994_username
   password: !secret isy994_password
-#  enable_emeter: True   # add once supported
+#  enable_emeter: True
 
 # Garage doors
 cover:
@@ -155,6 +155,10 @@ cloud:
       switch.kitchen_master_btn:
         name: kitchen
         description: Kitchen lights
+        display_categories: SWITCH
+      switch.office_lights:
+        name: office
+        description: Office lights
         display_categories: SWITCH
 
 group: !include groups.yaml
